Fix margin misalignment

--- a/css/style1.css
+++ b/css/style1.css
@@ -38,6 +38,7 @@ aside {
 article {
   margin-left:360px;
   margin-bottom: 20px;
+  margin-top: -10px;
 }
 
 footer {
